[tool.poetry]
name = "poetry_demo"
version = "0.1.0"
description = "demo of poetry"
authors = ["Luis Ek <luis.ek3@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
mflow = "1.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
